syntax.output
State 26 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | /* empty */

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID error RP
   22       | ID LP error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | LC DefList error RC
   28       | LC error RC

   29 StmtList: Stmt StmtList
   30         | /* empty */

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | IF LP Exp RP error ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | IF LP error SEMI
   39     | WHILE LP error RP Stmt
   40     | error SEMI

   41 DefList: Def DefList
   42        | /* empty */

   43 Def: Specifier DecList SEMI
   44    | Specifier error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | LP error RP
   68    | Exp LB error RB

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 22 27 28 36 38 39 40 44 67 68
INT (258) 18 65
FLOAT (259) 66
ID (260) 14 16 17 19 20 21 22 60 61 63 64
SEMI (261) 4 5 7 31 33 38 40 43 44
COMMA (262) 9 23 46 69
ASSIGNOP (263) 48 49
RELOP (264) 52
PLUS (265) 53
MINUS (266) 54 58
STAR (267) 55
DIV (268) 56
AND (269) 50
OR (270) 51
DOT (271) 63
NOT (272) 59
TYPE (273) 10
LP (274) 19 20 22 34 35 36 37 38 39 57 60 61 67
RP (275) 19 20 21 22 34 35 36 37 39 57 60 61 67
LB (276) 18 62 68
RB (277) 18 62 68
LC (278) 12 26 27 28
RC (279) 12 26 27 28
STRUCT (280) 12 13
RETURN (281) 33
IF (282) 34 35 36 38
ELSE (283) 35 36
WHILE (284) 37 39
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 25 43 44
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18, on right: 8 9 18 25 47 48
FunDec (41)
    on left: 19 20 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 19 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27 28, on right: 6 32
StmtList (45)
    on left: 29 30, on right: 26 29
Stmt (46)
    on left: 31 32 33 34 35 36 37 38 39 40, on right: 29 34 35 36 37
    39
DefList (47)
    on left: 41 42, on right: 12 26 27 41
Def (48)
    on left: 43 44, on right: 41
DecList (49)
    on left: 45 46, on right: 43 46
Dec (50)
    on left: 47 48, on right: 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68, on right: 31 33 34 35 36 37 48 49 50 51 52 53 54 55 56 57
    58 59 62 63 68 69 70
Args (52)
    on left: 69 70, on right: 60 69


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


state 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


state 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


state 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


state 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


state 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

    7 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 20


state 14

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . error RP
   22       | ID . LP error RP

    error  shift, and go to state 21
    LP     shift, and go to state 22

    SEMI   reduce using rule 17 (VarDec)
    COMMA  reduce using rule 17 (VarDec)
    LB     reduce using rule 17 (VarDec)


state 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


state 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 8 (ExtDecList)


state 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


state 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


state 20

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


state 21

   21 FunDec: ID error . RP

    RP  shift, and go to state 31


state 22

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   22       | ID LP . error RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 35
    ParamDec         go to state 36


state 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 24

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 17


state 25

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 39


state 26

   26 CompSt: LC . DefList StmtList RC
   27       | LC . DefList error RC
   28       | LC . error RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 42 (DefList)]
    INT     reduce using rule 42 (DefList)
    FLOAT   reduce using rule 42 (DefList)
    ID      reduce using rule 42 (DefList)
    MINUS   reduce using rule 42 (DefList)
    NOT     reduce using rule 42 (DefList)
    LP      reduce using rule 42 (DefList)
    LC      reduce using rule 42 (DefList)
    RC      reduce using rule 42 (DefList)
    RETURN  reduce using rule 42 (DefList)
    IF      reduce using rule 42 (DefList)
    WHILE   reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 30


state 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 28

   43 Def: Specifier . DecList SEMI
   44    | Specifier . error SEMI

    error  shift, and go to state 42
    ID     shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


state 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


state 30

   41 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 47
    Def              go to state 30


state 31

   21 FunDec: ID error RP .

    $default  reduce using rule 21 (FunDec)


state 32

   22 FunDec: ID LP error . RP

    RP  shift, and go to state 48


state 33

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


state 34

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 49


state 35

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


state 36

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 24 (VarList)


state 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


state 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 39

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


state 40

   28 CompSt: LC error . RC

    RC  shift, and go to state 53


state 41

   26 CompSt: LC DefList . StmtList RC
   27       | LC DefList . error RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 26
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


state 42

   44 Def: Specifier error . SEMI

    SEMI  shift, and go to state 68


state 43

   18 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 25

    $default  reduce using rule 47 (Dec)


state 44

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 70


state 45

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 45 (DecList)


state 46

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


state 47

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


state 48

   22 FunDec: ID LP error RP .

    $default  reduce using rule 22 (FunDec)


state 49

   18 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 25 (ParamDec)


state 50

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


state 51

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 72
    ParamDec         go to state 36


state 52

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


state 53

   28 CompSt: LC error RC .

    $default  reduce using rule 28 (CompSt)


state 54

   27 CompSt: LC DefList error . RC
   40 Stmt: error . SEMI

    SEMI  shift, and go to state 73
    RC    shift, and go to state 74


state 55

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


state 56

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


state 57

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .

    LP  shift, and go to state 75

    $default  reduce using rule 64 (Exp)


state 58

   58 Exp: MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 76


state 59

   59 Exp: NOT . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 77


state 60

   57 Exp: LP . Exp RP
   67    | LP . error RP

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 79


state 61

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 80


state 62

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   36     | IF . LP Exp RP error ELSE Stmt
   38     | IF . LP error SEMI

    LP  shift, and go to state 81


state 63

   37 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . LP error RP Stmt

    LP  shift, and go to state 82


state 64

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


state 65

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


state 66

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 84
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 26
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 85
    Stmt      go to state 66
    Exp       go to state 67


state 67

   31 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


state 68

   44 Def: Specifier error SEMI .

    $default  reduce using rule 44 (Def)


state 69

   48 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 97


state 70

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


state 71

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 98
    Dec      go to state 45


state 72

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


state 73

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


state 74

   27 CompSt: LC DefList error RC .

    $default  reduce using rule 27 (CompSt)


state 75

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 99

    Exp   go to state 100
    Args  go to state 101


state 76

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    STAR  shift, and go to state 91
    DIV   shift, and go to state 92
    DOT   shift, and go to state 95
    LB    shift, and go to state 96

    $default  reduce using rule 58 (Exp)


state 77

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 59 (Exp)


state 78

   67 Exp: LP error . RP

    RP  shift, and go to state 102


state 79

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 103
    LB        shift, and go to state 96


state 80

   33 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    SEMI      shift, and go to state 104
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


state 81

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt
   36     | IF LP . Exp RP error ELSE Stmt
   38     | IF LP . error SEMI

    error  shift, and go to state 105
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 106


state 82

   37 Stmt: WHILE LP . Exp RP Stmt
   39     | WHILE LP . error RP Stmt

    error  shift, and go to state 107
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 108


state 83

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


state 84

   40 Stmt: error . SEMI

    SEMI  shift, and go to state 73


state 85

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


state 86

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


state 87

   49 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 109


state 88

   52 Exp: Exp RELOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 110


state 89

   53 Exp: Exp PLUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 111


state 90

   54 Exp: Exp MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 112


state 91

   55 Exp: Exp STAR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 113


state 92

   56 Exp: Exp DIV . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 114


state 93

   50 Exp: Exp AND . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 115


state 94

   51 Exp: Exp OR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 116


state 95

   63 Exp: Exp DOT . ID

    ID  shift, and go to state 117


state 96
